--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-07-17 12:24-0400\n"
-"PO-Revision-Date: 2025-07-14 23:52+0800\n"
+"PO-Revision-Date: 2025-07-18 05:15+0800\n"
 "Last-Translator: nick.exe <nick.exe@gmail.com>\n"
 "Language-Team: CodeBay.IN\n"
 "Language: zh_TW\n"
@@ -18,9 +18,8 @@ msgstr ""
 "X-Generator: Poedit 3.6\n"
 
 #: src/widgets/application.vala:72
-#, fuzzy
 msgid "A modern compatibility tools manager"
-msgstr "適用於 Linux 的現代相容性工具管理程式。"
+msgstr "現代的相容性工具管理程式。"
 
 #: src/widgets/application.vala:74
 msgid "Website"
@@ -168,7 +167,7 @@ msgstr "顯示更多資訊"
 #: src/widgets/runners/installed-row.vala:11
 #: src/widgets/runners/basic-row.vala:48
 msgid "Used"
-msgstr ""
+msgstr "已使用"
 
 #: src/widgets/runners/load-more-row.vala:8
 #: src/widgets/runners/load-more-row.vala:17
@@ -182,11 +181,11 @@ msgstr "您確定要繼續嗎？"
 #: src/widgets/runners/remove-dialog.vala:21
 #, c-format
 msgid "Used by %i games."
-msgstr "有 %i 款遊戲使用。"
+msgstr "已有 %i 款遊戲使用。"
 
 #: src/widgets/runners/remove-dialog.vala:24
 msgid "Used by 1 game."
-msgstr "有 1 款遊戲使用。"
+msgstr "已有 1 款遊戲使用。"
 
 #: src/widgets/runners/remove-dialog.vala:26
 msgid "Are you sure you want to proceed?"
@@ -251,9 +250,8 @@ msgid "Extracting"
 msgstr "正在解壓縮"
 
 #: src/widgets/runners/install-dialog.vala:82
-#, fuzzy
 msgid "Moving"
-msgstr "正在移除"
+msgstr "正在搬移"
 
 #: src/widgets/runners/upgrade-dialog.vala:17
 #, c-format
@@ -267,9 +265,9 @@ msgstr "嘗試更新 %s 時發生錯誤。"
 
 #: src/widgets/runners/installed-row.vala:12
 #: src/widgets/runners/basic-row.vala:49
-#, fuzzy, c-format
+#, c-format
 msgid "%s is used by %i game(s)"
-msgstr "有 %i 款遊戲使用。"
+msgstr "%1$s 已有 %2$i 款遊戲使用。"
 
 #: src/widgets/runners/installed-row.vala:32
 #: src/widgets/runners/steamtinkerlaunch-row.vala:118
@@ -277,17 +275,16 @@ msgid "Check this to also delete your configuration files."
 msgstr "勾選此選項也會移除設定檔。"
 
 #: src/widgets/runners/filters-box.vala:12
-#, fuzzy
 msgid "Show installed only"
-msgstr "僅顯示已安裝的(_I)"
+msgstr "僅顯示已安裝的"
 
 #: src/widgets/runners/filters-box.vala:21
 msgid "Show used only"
-msgstr ""
+msgstr "僅顯示已使用的"
 
 #: src/widgets/runners/filters-box.vala:30
 msgid "Show unused only"
-msgstr ""
+msgstr "僅顯示未使用的"
 
 #: src/widgets/runners/steamtinkerlaunch-row.vala:43
 #, c-format
@@ -342,7 +339,7 @@ msgstr "名稱"
 
 #: src/widgets/games/games-box.vala:92
 msgid "Prefix"
-msgstr ""
+msgstr "前置環境"
 
 #: src/widgets/games/games-box.vala:99
 #: src/widgets/games/mass-edit-dialog.vala:38
