--- a/po/ja.po
+++ b/po/ja.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-11-03 16:37-0500\n"
-"PO-Revision-Date: 2025-11-09 06:48+0900\n"
+"PO-Revision-Date: 2025-11-09 08:57+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -230,7 +230,7 @@ msgstr "もっと読み込む"
 
 #: src/widgets/runners/remove-dialog.vala:13
 msgid "Are you sure you want this?"
-msgstr ""
+msgstr "本当に続けますか?"
 
 #: src/widgets/runners/remove-dialog.vala:21
 #, c-format
@@ -310,7 +310,7 @@ msgstr "%s は %i つのゲームで使われています"
 #: src/widgets/runners/installed-row.vala:38
 #: src/widgets/runners/steamtinkerlaunch-row.vala:118
 msgid "Check this to also delete your configuration files."
-msgstr ""
+msgstr "ここをチェックすると、設定ファイルまで削除されます。"
 
 #: src/widgets/runners/filters-box.vala:12
 msgid "Installed"
@@ -368,6 +368,7 @@ msgstr ""
 #, c-format
 msgid "There's currently no known way for us to install %s for the %s."
 msgstr ""
+"現在、%s に必要な %s をインストールしているかを確認するすべがありません。"
 
 #: src/widgets/runners/steamtinkerlaunch-row.vala:182
 msgid "Up-to-date"
@@ -375,23 +376,24 @@ msgstr "最新"
 
 #: src/widgets/runners/steamtinkerlaunch-row.vala:182
 msgid "Update to the latest version"
-msgstr ""
+msgstr "最新のバージョンに更新する"
 
 #: src/widgets/games/games-box.vala:62
 msgid "Close the Steam client beforehand so that the changes can be applied."
 msgstr ""
+"変更を適用する前に、Steam クライアントを終了していることを確認してください。"
 
 #: src/widgets/games/games-box.vala:77 src/widgets/games/games-box.vala:327
 msgid "Show search"
-msgstr ""
+msgstr "検索窓を表示"
 
 #: src/widgets/games/games-box.vala:103
 msgid "Search for a game"
-msgstr ""
+msgstr "ゲームを検索"
 
 #: src/widgets/games/games-box.vala:110
 msgid "Name"
-msgstr ""
+msgstr "名前"
 
 #: src/widgets/games/games-box.vala:114
 msgid "Prefix"
@@ -400,27 +402,29 @@ msgstr ""
 #: src/widgets/games/games-box.vala:121
 #: src/widgets/games/mass-edit-dialog.vala:38
 msgid "Compatibility tool"
-msgstr ""
+msgstr "互換性ツール"
 
 #: src/widgets/games/games-box.vala:125
 msgid "Other"
-msgstr ""
+msgstr "その他"
 
 #: src/widgets/games/games-box.vala:151
 msgid "An error occurred"
-msgstr ""
+msgstr "エラーが発生しました"
 
 #: src/widgets/games/games-box.vala:151
 msgid "No profile was found."
-msgstr ""
+msgstr "プロファイルが見つかりませんでした。"
 
 #: src/widgets/games/games-box.vala:151
 msgid "Make sure to connect yourself at least once on Steam."
 msgstr ""
+"Steam を少なくとも一度は起動して、ログインが完了していることを確認してくださ"
+"い"
 
 #: src/widgets/games/games-box.vala:151
 msgid "If you think this is an issue, make sure to report this on GitHub."
-msgstr ""
+msgstr "もしこれが不具合であると考える場合、GitHub で報告してください。"
 
 #: src/widgets/games/games-box.vala:211
 msgid "Unsuported launcher"
@@ -443,165 +447,169 @@ msgstr "開発をスピードアップしてほしい場合は、私を支援し
 #: src/widgets/games/compatibility-tool-dropdown.vala:81
 #: src/models/games/steam.vala:95 src/models/games/steam.vala:116
 msgid "Undefined"
-msgstr ""
+msgstr "未指定"
 
 #: src/widgets/games/games-box.vala:327
 msgid "Hide search"
-msgstr ""
+msgstr "検索窓を非表示"
 
 #: src/widgets/games/game-row.vala:55
 msgid "Modify the game launch options"
-msgstr ""
+msgstr "ゲームの起動オプションを変更"
 
 #: src/widgets/games/game-row.vala:81
 msgid "Unknown"
-msgstr ""
+msgstr "不明"
 
 #: src/widgets/games/game-row.vala:87
 msgid "Open ProtonDB page"
-msgstr ""
+msgstr "ProtonDB のページを開く"
 
 #: src/widgets/games/mass-edit-dialog.vala:20
 #: src/widgets/games/mass-edit-button.vala:10
 msgid "Mass edit"
-msgstr ""
+msgstr "まとめて設定"
 
 #: src/widgets/games/mass-edit-dialog.vala:20
 msgid "1 game selected"
-msgstr ""
+msgstr "1 つのゲームを選択済み"
 
 #: src/widgets/games/mass-edit-dialog.vala:20
 #, c-format
 msgid "%u games selected"
-msgstr ""
+msgstr "%u つのゲームを選択済み"
 
 #: src/widgets/games/mass-edit-dialog.vala:22
 #: src/widgets/games/launch-options-dialog.vala:14
 #: src/widgets/games/default-tool-dialog.vala:16
 msgid "Apply"
-msgstr ""
+msgstr "適用"
 
 #: src/widgets/games/mass-edit-dialog.vala:23
 msgid "Apply the current modifications"
-msgstr ""
+msgstr "現在の変更を適用"
 
 #: src/widgets/games/mass-edit-dialog.vala:31
 #: src/widgets/games/mass-edit-dialog.vala:43
 msgid "Enabled"
-msgstr ""
+msgstr "有効化"
 
 #: src/widgets/games/mass-edit-dialog.vala:32
 msgid ""
 "Enable this if you want the mass edit to take the compatibility tool into "
 "account."
-msgstr ""
+msgstr "互換性ツールをまとめて変更したい場合のみ、この設定を有効にしてください"
 
 #: src/widgets/games/mass-edit-dialog.vala:44
 msgid ""
 "Enable this if you want the mass edit to take the launch options into "
 "account."
 msgstr ""
+"起動オプションをまとめて変更したい場合のみ、この設定を有効にしてください"
 
 #: src/widgets/games/mass-edit-dialog.vala:48
 #: src/widgets/games/launch-options-dialog.vala:24
 msgid "Enter your desired launch options"
-msgstr ""
+msgstr "起動オプションに指定したい内容を入力"
 
 #: src/widgets/games/mass-edit-dialog.vala:51
 msgid "Launch options"
-msgstr ""
+msgstr "起動オプション"
 
 #: src/widgets/games/mass-edit-dialog.vala:55
 msgid ""
 "Enable all the options that you want the mass edit to take into account."
-msgstr ""
+msgstr "まとめて変更したい全てのオプションを有効化してください。"
 
 #: src/widgets/games/mass-edit-dialog.vala:147
 msgid ""
 "When trying to change the compatibility tool/launch options of the selected "
 "games an error occurred for the following games:"
 msgstr ""
+"選択されたゲームの互換性ツール/起動オプションを設定中に以下のゲームでエラーが"
+"発生しました:"
 
 #: src/widgets/games/shortcut-button.vala:23
 #: src/widgets/games/shortcut-button.vala:28
 msgid "Create shortcut"
-msgstr ""
+msgstr "ショートカットを作成"
 
 #: src/widgets/games/shortcut-button.vala:28
 msgid "Delete shortcut"
-msgstr ""
+msgstr "ショートカットを削除"
 
 #: src/widgets/games/shortcut-button.vala:29
 msgid "Create a shortcut of ProtonPlus in Steam"
-msgstr ""
+msgstr "ProtonPlus のショートカットを Steam に作成する"
 
 #: src/widgets/games/shortcut-button.vala:29
 msgid "Delete the shortcut of ProtonPlus in Steam"
-msgstr ""
+msgstr "Steam に作成した ProtonPlus のショートカットを削除する"
 
 #: src/widgets/games/shortcut-button.vala:38
 msgid "When trying to delete the shortcut in Steam an error occurred."
-msgstr ""
+msgstr "Steam に作成されたショートカットの削除中にエラーが発生しました。"
 
 #: src/widgets/games/shortcut-button.vala:47
 msgid "When trying to create the shortcut in Steam an error occurred."
-msgstr ""
+msgstr "Steam 上にショートカットを作成中にエラーが発生しました。"
 
 #: src/widgets/games/switch-profile-button.vala:14
 msgid "Switch profile"
-msgstr ""
+msgstr "プロファイルを変更"
 
 #: src/widgets/games/switch-profile-button.vala:23
 msgid "Switch to another profile"
-msgstr ""
+msgstr "別のプロファイルに変更する"
 
 #: src/widgets/games/select-button.vala:8
 msgid "Select all"
-msgstr ""
+msgstr "全てを選択"
 
 #: src/widgets/games/select-button.vala:11
 msgid "Select all the games"
-msgstr ""
+msgstr "全てのゲームを選択する"
 
 #: src/widgets/games/unselect-button.vala:8
 msgid "Unselect all"
-msgstr ""
+msgstr "全てを選択解除"
 
 #: src/widgets/games/unselect-button.vala:11
 msgid "Unselect all the games"
-msgstr ""
+msgstr "全てのゲームを選択解除する"
 
 #: src/widgets/games/mass-edit-button.vala:13
 msgid "Edit the compatibility tool of the selected games at once"
-msgstr ""
+msgstr "選択したゲームの互換性ツールを一度に変更する"
 
 #: src/widgets/games/mass-edit-button.vala:42
 msgid ""
 "Please make sure to select at least one game before using the mass edit "
 "feature."
 msgstr ""
+"まとめて設定を選択するためには、少なくとも一つのゲームを選択してください。"
 
 #: src/widgets/games/launch-options-dialog.vala:12
 msgid "Modify launch options"
-msgstr ""
+msgstr "起動オプションの変更"
 
 #: src/widgets/games/launch-options-dialog.vala:15
 #: src/widgets/games/default-tool-dialog.vala:17
 msgid "Apply the current modification"
-msgstr ""
+msgstr "現在の変更を適用する"
 
 #: src/widgets/games/launch-options-dialog.vala:57
 #, c-format
 msgid "When trying to change the launch options of %s an error occurred."
-msgstr ""
+msgstr "%s の起動オプションを変更中にエラーが発生しました。"
 
 #: src/widgets/games/profile-dialog.vala:15
 msgid "Select a profile"
-msgstr ""
+msgstr "プロファイルを選択"
 
 #: src/widgets/games/extra-button.vala:11
 msgid "Open install directory"
-msgstr ""
+msgstr "インストール先のディレクトリを開く"
 
 #: src/widgets/games/extra-button.vala:14
 msgid "Open prefix directory"
@@ -609,30 +617,30 @@ msgstr ""
 
 #: src/widgets/games/extra-button.vala:17
 msgid "Open in protontricks"
-msgstr ""
+msgstr "protontricks で開く"
 
 #: src/widgets/games/extra-button.vala:32
 msgid "Open menu"
-msgstr ""
+msgstr "メニューを開く"
 
 #: src/widgets/games/default-tool-button.vala:8
 #: src/widgets/games/default-tool-button.vala:14
 #: src/widgets/games/default-tool-dialog.vala:14
 msgid "Set the default compatibility tool"
-msgstr ""
+msgstr "デフォルトの互換性ツールを設定する"
 
 #: src/widgets/games/default-tool-dialog.vala:60
 msgid "When trying to change the default compatibility tool an error occurred."
-msgstr ""
+msgstr "デフォルトの互換性ツールを設定中にエラーが発生しました。"
 
 #: src/widgets/games/compatibility-tool-row.vala:18
 msgid "Select your desired compatibility tool"
-msgstr ""
+msgstr "使用したい互換性ツールを選択"
 
 #: src/widgets/games/compatibility-tool-dropdown.vala:75
 #, c-format
 msgid "When trying to change the compatibility tool of %s an error occurred."
-msgstr ""
+msgstr "%s に使用する互換性ツールを変更中にエラーが発生しました。"
 
 #: src/models/runners/steamtinkerlaunch.vala:6
 msgid ""
@@ -643,18 +651,22 @@ msgstr ""
 #: src/translatables.vala:4
 msgid "Compatibility tools by Valve for running Windows software on Linux."
 msgstr ""
+"Valve が提供する、Windows ソフトウェアを Linux で実行するための互換性ツール"
 
 #: src/translatables.vala:5
 msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
 "Valve's default Proton."
 msgstr ""
+"Valve 公式の Proton に改良を加えた、Windows のゲームを動かすための Steam 互換"
+"性ツール。"
 
 #: src/translatables.vala:6
+#, fuzzy
 msgid ""
 "Steam compatibility tool from the CachyOS Linux distribution for running "
 "Windows games with improvements over Valve's default Proton."
-msgstr ""
+msgstr "Cachy OS のディストリビューションValve 公式の Proton に改良を加えた、"
 
 #: src/translatables.vala:7
 msgid ""
@@ -662,32 +674,44 @@ msgid ""
 "Valve's default Proton. By Etaash Mathamsetty adding FSR4 support and wine "
 "wayland tweaks."
 msgstr ""
+"Valve 公式の Proton に改良を加えた、Windows のゲームを動かすための Steam 互換"
+"性ツール。Etaash Mathamsetty 氏によって FSR4 サポートと wine wayland のへの変"
+"更が追加されています。"
 
 #: src/translatables.vala:8
 msgid ""
 "Steam compatibility tool based on Proton-GE with modifications for very old "
 "GPUs, with DXVK."
 msgstr ""
+"Proton-GE をベースにした Steam 互換性ツールで、とても古い GPU に向けた調整が"
+"されており、DXVK を使用しています。"
 
 #: src/translatables.vala:9
 msgid ""
 "Steam compatibility tool based on Proton-GE with modifications for very old "
 "GPUs, with DXVK-Async."
 msgstr ""
+"Proton-GE をベースにした Steam 互換性ツールで、とても古い GPU に向けた調整が"
+"されており、DXVKｰAsync を使用しています。"
 
 #: src/translatables.vala:10
 msgid "Custom Proton build for running Windows games, based on Wine-tkg."
 msgstr ""
+"Wine-tkg を元にした、Windows ゲームを動かすためのカスタム Proton ビルド"
 
 #: src/translatables.vala:11
 msgid ""
 "Steam compatibility tool based on Proton-GE with additional patches to "
 "improve RTSP codecs for VRChat."
 msgstr ""
+"VRChat での RTSP コーデックへの対応パッチを適応した、Proton-GE をベースにし"
+"た Steam 互換性ツール。"
 
 #: src/translatables.vala:12
 msgid "Custom Proton build for running the Northstar client for Titanfall 2."
 msgstr ""
+"Titanfall 2 の Northstar クライアントを動作させるためのカスタムの Proton ビル"
+"ド。"
 
 #: src/translatables.vala:13
 msgid ""
@@ -709,7 +733,7 @@ msgstr ""
 
 #: src/translatables.vala:17
 msgid "Wine build compiled from the official WineHQ sources."
-msgstr ""
+msgstr "WineHQ 公式のソースからコンパイルされた Wine のビルド"
 
 #: src/translatables.vala:18
 msgid "Wine build with the Staging patchset."
@@ -721,11 +745,11 @@ msgstr ""
 
 #: src/translatables.vala:20
 msgid "Wine build modified by Valve and other contributors."
-msgstr ""
+msgstr "Valve やほかの貢献者によって改変された Wine のビルド。"
 
 #: src/translatables.vala:21
 msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
-msgstr ""
+msgstr "Vulkan ベースの Linux/Wine 向けの Direct3D 8, 9, 10 と 11 の実装"
 
 #: src/translatables.vala:22
 msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
@@ -739,7 +763,7 @@ msgstr ""
 msgid ""
 "Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
 "top of Vulkan."
-msgstr ""
+msgstr "Wine の VKD3D を"
 
 #: data/ui/gtk/help-overlay.ui:11
 msgctxt "shortcut window"
