--- a/po/be.po
+++ b/po/be.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-19 19:22-0500\n"
+"POT-Creation-Date: 2025-11-19 19:56-0500\n"
 "PO-Revision-Date: 2024-05-31 16:22+0000\n"
 "Last-Translator: Yahor <k1llo2810@protonmail.com>\n"
 "Language-Team: Belarusian <https://hosted.weblate.org/projects/protonplus/"
@@ -872,14 +872,18 @@ msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
 msgstr "Рэалізацыя Direct3D 9, 10 і 11 на аснове Vulkan для Linux/Wine"
 
 #: src/translatables.vala:21
-msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
+msgid "DXVK builds that work with pre-Vulkan 1.3 versions."
 msgstr ""
 
 #: src/translatables.vala:22
-msgid "DXVK Async Builds that work with pre-Vulkan 1.3 versions"
+msgid "DXVK Async builds that work with pre-Vulkan 1.3 versions."
 msgstr ""
 
 #: src/translatables.vala:23
+msgid "DXVK builds with gplasync patch by Ph42oN."
+msgstr ""
+
+#: src/translatables.vala:24
 #, fuzzy
 msgid ""
 "Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
