--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-11-19 19:56-0500\n"
-"PO-Revision-Date: 2025-11-16 03:57+0800\n"
+"PO-Revision-Date: 2025-11-25 23:08+0800\n"
 "Last-Translator: nick.exe <nick.exe@gmail.com>\n"
 "Language-Team: Chinese <kde-i18n-doc@kde.org>\n"
 "Language: zh\n"
@@ -55,9 +55,8 @@ msgid "Donate"
 msgstr "捐赠"
 
 #: src/widgets/window.vala:49
-#, fuzzy
 msgid "_Preferences"
-msgstr "首选项"
+msgstr "偏好设定(_P)"
 
 #: src/widgets/window.vala:50
 msgid "_Keyboard Shortcuts"
@@ -81,7 +80,7 @@ msgstr "游戏库"
 
 #: src/widgets/window.vala:93
 msgid "Couldn't load the launchers"
-msgstr ""
+msgstr "无法加载启动器"
 
 #: src/widgets/window.vala:107
 #, c-format
@@ -103,40 +102,37 @@ msgid ""
 msgstr "请务必至少运行过一次启动器，以确保其正确初始化"
 
 #: src/widgets/window.vala:130
-#, fuzzy
 msgid "Checking for updates"
-msgstr "正在检查更新..."
+msgstr "正在检查更新"
 
 #: src/widgets/window.vala:131
 #, c-format
 msgid "Updating %s"
-msgstr ""
+msgstr "正在更新 %s"
 
 #: src/widgets/window.vala:148
-#, fuzzy
 msgid "Nothing to update"
-msgstr "无任何更新。"
+msgstr "无任何更新"
 
 #: src/widgets/window.vala:149
 #, c-format
 msgid "No update found for %s"
-msgstr ""
+msgstr "未找到 %s 的更新"
 
 #: src/widgets/window.vala:154
-#, fuzzy
 msgid "Everything is now up-to-date"
-msgstr "当前皆已为最新版本。"
+msgstr "当前皆已为最新版本"
 
 #: src/widgets/window.vala:155
-#, fuzzy, c-format
+#, c-format
 msgid "%s is now up-to-date"
-msgstr "%s 已为最新版本。"
+msgstr "%s 已为最新版本"
 
 #: src/widgets/window.vala:160 src/widgets/window.vala:166
 #: src/widgets/window.vala:172 src/widgets/window.vala:178
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't check for updates (Reason: %s)"
-msgstr "正在检查更新..."
+msgstr "无法检查更新（原因：%s）"
 
 #: src/widgets/window.vala:160 src/widgets/window.vala:161
 #: src/widgets/runners/runner-row.vala:56
@@ -145,9 +141,9 @@ msgstr "已达到 API 限制"
 
 #: src/widgets/window.vala:161 src/widgets/window.vala:167
 #: src/widgets/window.vala:173 src/widgets/window.vala:179
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't update %s (Reason: %s)"
-msgstr "安装 %s"
+msgstr "无法更新 %1$s（原因：%2$s）"
 
 #: src/widgets/window.vala:166 src/widgets/window.vala:167
 #: src/widgets/runners/runner-row.vala:59
@@ -157,7 +153,7 @@ msgstr "无法存取 API"
 #: src/widgets/window.vala:172 src/widgets/window.vala:173
 #: src/widgets/runners/runner-row.vala:62
 msgid "Invalid access token"
-msgstr ""
+msgstr "无效的存取令牌"
 
 #: src/widgets/window.vala:178 src/widgets/window.vala:179
 #: src/widgets/runners/runner-row.vala:65
@@ -166,7 +162,7 @@ msgstr "未知错误"
 
 #: src/widgets/window.vala:180 src/widgets/error-dialog.vala:7
 msgid "Report"
-msgstr ""
+msgstr "回报"
 
 #: src/widgets/window.vala:218
 #: src/widgets/runners/steamtinkerlaunch-row.vala:46
@@ -204,32 +200,30 @@ msgid "OK"
 msgstr "确定"
 
 #: src/widgets/preferences/preferences-dialog.vala:9
-#, fuzzy
 msgid "General"
 msgstr "一般"
 
 #: src/widgets/preferences/preferences-dialog.vala:15
 msgid "Automatic updates"
-msgstr ""
+msgstr "自动更新"
 
 #: src/widgets/preferences/preferences-dialog.vala:16
 msgid ""
 "Whether or not to update the installed 'Latest' runners when the application "
 "start"
-msgstr ""
+msgstr "是否在启动时更新已安装的“Latest”运行器"
 
 #: src/widgets/preferences/preferences-dialog.vala:22
 msgid "Latest"
-msgstr ""
+msgstr "最新版本"
 
 #: src/widgets/preferences/preferences-dialog.vala:42
-#, fuzzy
 msgid "Remember last used profile"
-msgstr "清除启动器"
+msgstr "记住上次使用的个人资料"
 
 #: src/widgets/preferences/preferences-dialog.vala:43
 msgid "Whether or not to remember the last used Steam profile"
-msgstr ""
+msgstr "是否记住上次使用的 Steam 个人资料"
 
 #: src/widgets/preferences/theme-row.vala:15
 msgid "System"
@@ -237,7 +231,7 @@ msgstr "系统"
 
 #: src/widgets/preferences/theme-row.vala:16
 msgid "Light"
-msgstr "明亮"
+msgstr "亮色"
 
 #: src/widgets/preferences/theme-row.vala:17
 msgid "Dark"
@@ -245,33 +239,31 @@ msgstr "暗色"
 
 #: src/widgets/preferences/theme-row.vala:25
 msgid "Current theme"
-msgstr ""
+msgstr "当前主题"
 
 #: src/widgets/preferences/refresh-steam-profiles-row.vala:15
-#, fuzzy
 msgid "Refresh profiles"
-msgstr "选择个人资料"
+msgstr "刷新个人资料"
 
 #: src/widgets/preferences/refresh-launchers-runners-row.vala:15
 msgid "Refresh launchers/runners"
-msgstr ""
+msgstr "刷新启动器/运行器"
 
 #: src/widgets/preferences/check-updates-row.vala:11
 msgid "Check if any of the installed 'Latest' runners needs to be updated"
-msgstr ""
+msgstr "检查已安装的“Latest”运行器是否需要更新"
 
 #: src/widgets/preferences/check-updates-row.vala:16
-#, fuzzy
 msgid "Check for updates"
-msgstr "正在检查更新..."
+msgstr "检查更新"
 
 #: src/widgets/preferences/access-token-row.vala:4
 msgid "Access token"
-msgstr ""
+msgstr "存取令牌"
 
 #: src/widgets/preferences/access-token-row.vala:5
 msgid "Enter an access token to reduce your chances of being rate limited"
-msgstr ""
+msgstr "输入存取令牌以降低被限速的机会"
 
 #: src/widgets/runners/description-dialog.vala:14
 msgid "More information"
@@ -291,7 +283,7 @@ msgstr "显示更多信息"
 
 #: src/widgets/runners/release-row.vala:17
 msgid "Update the runner if a newer version is available"
-msgstr ""
+msgstr "若有新版本运行器，请更新"
 
 #: src/widgets/runners/release-row.vala:20
 msgid "Open runner directory"
@@ -327,7 +319,7 @@ msgstr "请确保连接至互连网。"
 
 #: src/widgets/runners/runner-row.vala:62
 msgid "Make sure the access token you provided is valid."
-msgstr ""
+msgstr "请确保提供的存取令牌是有效的。"
 
 #: src/widgets/runners/load-more-row.vala:8
 #: src/widgets/runners/load-more-row.vala:17
@@ -362,14 +354,14 @@ msgid "Yes"
 msgstr "是"
 
 #: src/widgets/runners/remove-dialog.vala:49
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't delete %s"
-msgstr "安装 %s"
+msgstr "无法移除 %s"
 
 #: src/widgets/runners/install-dialog.vala:56
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't install %s"
-msgstr "安装 %s"
+msgstr "无法安装 %s"
 
 #: src/widgets/runners/install-dialog.vala:84
 #: src/widgets/runners/upgrade-dialog.vala:77
@@ -391,9 +383,9 @@ msgid "Upgrade %s"
 msgstr "更新 %s"
 
 #: src/widgets/runners/upgrade-dialog.vala:56
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't upgrade %s"
-msgstr "安装 %s"
+msgstr "无法更新 %s"
 
 #: src/widgets/runners/installed-row.vala:12
 #: src/widgets/runners/basic-row.vala:63
@@ -410,7 +402,7 @@ msgstr "勾选此项也会删除配置文件。"
 msgid ""
 "This version will get automatically updated when there's an update available "
 "each time your launch the application if automatic updates is enabled"
-msgstr ""
+msgstr "若启用自动更新功能，此版本将于每次启动，在有可用更新时自动更新。"
 
 #: src/widgets/runners/filters-box.vala:12
 msgid "Installed"
@@ -611,14 +603,13 @@ msgid ""
 msgstr "请启用要在批量编辑中涵盖的所有选项。"
 
 #: src/widgets/games/mass-edit-dialog.vala:147
-#, fuzzy
 msgid ""
 "Couldn't change the compatibility tool/launch options of the selected games"
-msgstr "尝试变更 %s 的兼容性工具时发生错误。"
+msgstr "无法变更所选游戏的兼容性工具/启动选项"
 
 #: src/widgets/games/mass-edit-dialog.vala:147
 msgid "The following games had an issue:"
-msgstr ""
+msgstr "下列游戏存在问题："
 
 #: src/widgets/games/shortcut-button.vala:23
 #: src/widgets/games/shortcut-button.vala:28
@@ -638,14 +629,12 @@ msgid "Delete the shortcut of ProtonPlus in Steam"
 msgstr "删除 Steam 中的 ProtonPlus 捷径"
 
 #: src/widgets/games/shortcut-button.vala:38
-#, fuzzy
 msgid "Couldn't delete the shortcut in Steam"
-msgstr "删除 Steam 中的 ProtonPlus 捷径"
+msgstr "无法移除 Steam 中的捷径"
 
 #: src/widgets/games/shortcut-button.vala:46
-#, fuzzy
 msgid "Couldn't create the shortcut in Steam"
-msgstr "删除 Steam 中的 ProtonPlus 捷径"
+msgstr "无法在 Steam 中建立捷径"
 
 #: src/widgets/games/switch-profile-button.vala:14
 msgid "Switch profile"
@@ -691,9 +680,9 @@ msgid "Apply the current modification"
 msgstr "应用当前修改"
 
 #: src/widgets/games/launch-options-dialog.vala:57
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't change the launch options of %s"
-msgstr "尝试变更 %s 的启动选项时发生错误。"
+msgstr "无法变更 %s 的启动选项"
 
 #: src/widgets/games/profile-dialog.vala:15
 msgid "Select a profile"
@@ -722,18 +711,17 @@ msgid "Set the default compatibility tool"
 msgstr "设定默认兼容性工具"
 
 #: src/widgets/games/default-tool-dialog.vala:60
-#, fuzzy
 msgid "Couldn't change the default compatibility tool"
-msgstr "设定默认兼容性工具"
+msgstr "无法变更预设兼容性工具"
 
 #: src/widgets/games/compatibility-tool-row.vala:18
 msgid "Select your desired compatibility tool"
 msgstr "选择所需的兼容性工具"
 
 #: src/widgets/games/compatibility-tool-dropdown.vala:75
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't change the compatibility tool of %s"
-msgstr "尝试变更 %s 的兼容性工具时发生错误。"
+msgstr "无法变更 %s 的兼容性工具"
 
 #: src/models/runners/steamtinkerlaunch.vala:6
 msgid ""
@@ -838,18 +826,16 @@ msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
 msgstr "适用于 Linux/Wine 的，基于 Vulkan 的 Direct3D 8、9、10 和 11 的实作。"
 
 #: src/translatables.vala:21
-#, fuzzy
 msgid "DXVK builds that work with pre-Vulkan 1.3 versions."
 msgstr "适用于 Vulkan 1.3 之前版本的 DXVK 建构版本。"
 
 #: src/translatables.vala:22
-#, fuzzy
 msgid "DXVK Async builds that work with pre-Vulkan 1.3 versions."
-msgstr "适用于 Vulkan 1.3 之前版本的 DXVK-Async 建构版本。"
+msgstr "适用于 Vulkan 1.3 之前版本的 DXVK Async 建构版本。"
 
 #: src/translatables.vala:23
 msgid "DXVK builds with gplasync patch by Ph42oN."
-msgstr ""
+msgstr "包含 Ph42oN 开发的 gplasync 修补程式的 DXVK 建构版本。"
 
 #: src/translatables.vala:24
 msgid ""
