--- a/po/de.po
+++ b/po/de.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-12-07 13:47-0500\n"
-"PO-Revision-Date: 2025-07-19 17:26+0200\n"
+"PO-Revision-Date: 2025-12-11 11:12+0100\n"
 "Last-Translator: Christian Lauinger <christian@lauinger-clan.de>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/protonplus/"
 "protonplus/de/>\n"
@@ -59,7 +59,7 @@ msgstr "Spenden"
 
 #: src/widgets/window.vala:49
 msgid "_Preferences"
-msgstr ""
+msgstr "_Einstellungen"
 
 #: src/widgets/window.vala:50
 msgid "_Keyboard Shortcuts"
@@ -83,7 +83,7 @@ msgstr "Spiele"
 
 #: src/widgets/window.vala:93
 msgid "Couldn't load the launchers"
-msgstr ""
+msgstr "Die Starter konnten nicht geladen werden"
 
 #: src/widgets/window.vala:107
 #, c-format
@@ -91,86 +91,83 @@ msgid "Welcome to %s"
 msgstr "Willkommen zu %s"
 
 #: src/widgets/window.vala:107
-#, fuzzy
 msgid ""
 "Install Steam, Lutris, Bottles, Heroic Games Launcher or WineZGUI to get "
 "started."
 msgstr ""
-"Installieren Sie Steam, Lutris, Bottles oder Heroic Games Launcher, um "
-"loszulegen."
+"Installieren Sie Steam, Lutris, Bottles oder Heroic Games Launcher oder "
+"WineZGUI, um loszulegen."
 
 #: src/widgets/window.vala:107
 msgid ""
 "Make sure to run the launchers at least once to ensure they're properly "
 "initialized"
 msgstr ""
+"Stellen Sie sicher, dass Sie die Startprogramme mindestens einmal ausführen, "
+"um sicherzustellen, dass sie ordnungsgemäß initialisiert sind"
 
 #: src/widgets/window.vala:130
-#, fuzzy
 msgid "Checking for updates"
-msgstr "Prüfe auf Aktualisierungen..."
+msgstr "Prüfe auf Aktualisierungen"
 
 #: src/widgets/window.vala:131
 #, c-format
 msgid "Updating %s"
-msgstr ""
+msgstr "Aktualisiere %s"
 
 #: src/widgets/window.vala:148
-#, fuzzy
 msgid "Nothing to update"
-msgstr "Nichts zu aktualisieren."
+msgstr "Nichts zu aktualisieren"
 
 #: src/widgets/window.vala:149
 #, c-format
 msgid "No update found for %s"
-msgstr ""
+msgstr "Kein Update für %s gefunden"
 
 #: src/widgets/window.vala:154
-#, fuzzy
 msgid "Everything is now up-to-date"
-msgstr "Alles ist jetzt aktuell."
+msgstr "Alles ist jetzt aktuell"
 
 #: src/widgets/window.vala:155
-#, fuzzy, c-format
+#, c-format
 msgid "%s is now up-to-date"
-msgstr "%s ist schon auf dem neuesten Stand."
+msgstr "%s ist schon auf dem neuesten Stand"
 
 #: src/widgets/window.vala:160 src/widgets/window.vala:166
 #: src/widgets/window.vala:172 src/widgets/window.vala:178
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't check for updates (Reason: %s)"
-msgstr "Prüfe auf Aktualisierungen..."
+msgstr "Es konnten keine Updates gefunden werden (Grund: %s)"
 
 #: src/widgets/window.vala:160 src/widgets/window.vala:161
 #: src/widgets/runners/runner-row.vala:56
 msgid "API limit reached"
-msgstr ""
+msgstr "API-Limit erreicht"
 
 #: src/widgets/window.vala:161 src/widgets/window.vala:167
 #: src/widgets/window.vala:173 src/widgets/window.vala:179
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't update %s (Reason: %s)"
-msgstr "Installiere %s"
+msgstr "%s konnte nicht aktualisiert werden (Grund: %s)"
 
 #: src/widgets/window.vala:166 src/widgets/window.vala:167
 #: src/widgets/runners/runner-row.vala:59
 msgid "Unable to reach the API"
-msgstr ""
+msgstr "Die API kann nicht erreicht werden"
 
 #: src/widgets/window.vala:172 src/widgets/window.vala:173
 #: src/widgets/runners/runner-row.vala:62
 msgid "Invalid access token"
-msgstr ""
+msgstr "Ungültiges Zugriffstoken"
 
 #: src/widgets/window.vala:178 src/widgets/window.vala:179
 #: src/widgets/runners/runner-row.vala:65
-#, fuzzy
 msgid "Unknown error"
-msgstr "Unbekannt"
+msgstr "Unbekannter Fehler"
 
 #: src/widgets/window.vala:180 src/widgets/error-dialog.vala:7
 msgid "Report"
-msgstr ""
+msgstr "Bericht"
 
 #: src/widgets/window.vala:218
 #: src/widgets/runners/steamtinkerlaunch-row.vala:39
@@ -207,73 +204,77 @@ msgid "OK"
 msgstr "OK"
 
 #: src/widgets/preferences/preferences-dialog.vala:9
-#, fuzzy
 msgid "General"
 msgstr "Allgemein"
 
 #: src/widgets/preferences/preferences-dialog.vala:15
 msgid "Automatic updates"
-msgstr ""
+msgstr "Automatische Updates"
 
 #: src/widgets/preferences/preferences-dialog.vala:16
 msgid ""
 "Whether or not to update the installed 'Latest' runners when the application "
 "start"
 msgstr ""
+"Ob die installierten „neuesten“ Ausführungswerkzeuge beim Start der "
+"Anwendung aktualisiert werden sollen oder nicht"
 
 #: src/widgets/preferences/preferences-dialog.vala:22
 msgid "Latest"
-msgstr ""
+msgstr "Letztes"
 
 #: src/widgets/preferences/preferences-dialog.vala:42
 msgid "Remember last used profile"
-msgstr ""
+msgstr "Zuletzt verwendetes Profil merken"
 
 #: src/widgets/preferences/preferences-dialog.vala:43
 msgid "Whether or not to remember the last used Steam profile"
 msgstr ""
+"Ob das zuletzt verwendete Steam-Profil gespeichert werden soll oder nicht"
 
 #: src/widgets/preferences/theme-row.vala:15
 msgid "System"
-msgstr ""
+msgstr "System"
 
 #: src/widgets/preferences/theme-row.vala:16
 msgid "Light"
-msgstr ""
+msgstr "Hell"
 
 #: src/widgets/preferences/theme-row.vala:17
 msgid "Dark"
-msgstr ""
+msgstr "Dunkel"
 
 #: src/widgets/preferences/theme-row.vala:25
 msgid "Current theme"
-msgstr ""
+msgstr "Aktuelles Thema"
 
 #: src/widgets/preferences/refresh-steam-profiles-row.vala:15
-#, fuzzy
 msgid "Refresh profiles"
-msgstr "Ein Profil auswählen"
+msgstr "Profile aktualisieren"
 
 #: src/widgets/preferences/refresh-launchers-runners-row.vala:15
 msgid "Refresh launchers/runners"
-msgstr ""
+msgstr "Starter/Ausführungswerkzeuge aktualisieren"
 
 #: src/widgets/preferences/check-updates-row.vala:11
 msgid "Check if any of the installed 'Latest' runners needs to be updated"
 msgstr ""
+"Überprüfen Sie, ob einer der installierten „neuesten” Ausführungswerkzeuge "
+"aktualisiert werden muss"
 
 #: src/widgets/preferences/check-updates-row.vala:16
-#, fuzzy
 msgid "Check for updates"
-msgstr "Prüfe auf Aktualisierungen..."
+msgstr "Prüfe auf Aktualisierungen"
 
 #: src/widgets/preferences/access-token-row.vala:4
 msgid "Access token"
-msgstr ""
+msgstr "Zugriffstoken"
 
 #: src/widgets/preferences/access-token-row.vala:5
 msgid "Enter an access token to reduce your chances of being rate limited"
 msgstr ""
+"Geben Sie einen Zugriffstoken ein, um die Wahrscheinlichkeit einer "
+"Ratenbegrenzung zu verringern"
 
 #: src/widgets/runners/description-dialog.vala:14
 msgid "More information"
@@ -293,12 +294,11 @@ msgstr "Mehr Informationen anzeigen"
 
 #: src/widgets/runners/release-row.vala:17
 msgid "Update the runner if a newer version is available"
-msgstr ""
+msgstr "Aktualisieren Sie den Runner, wenn eine neuere Version verfügbar ist"
 
 #: src/widgets/runners/release-row.vala:20
-#, fuzzy
 msgid "Open runner directory"
-msgstr "Präfixverzeichnis öffnen"
+msgstr "Ausführungswerkzeugverzeichnis öffnen"
 
 #: src/widgets/runners/release-row.vala:24
 #: src/widgets/runners/remove-dialog.vala:11
@@ -318,21 +318,20 @@ msgstr "Installiere %s"
 #: src/widgets/runners/basic-row.vala:66
 #: src/widgets/runners/filters-box.vala:22
 msgid "Used"
-msgstr "Nicht benutzt"
+msgstr "Benutzt"
 
 #: src/widgets/runners/runner-row.vala:56
 msgid "Try again in a few minutes."
-msgstr ""
+msgstr "Versuchen Sie es in ein paar Minuten erneut."
 
 #: src/widgets/runners/runner-row.vala:59
-#, fuzzy
 msgid "Make sure you're connected to the internet."
-msgstr ""
-"Stellen Sie sicher, dass Sie sich mindestens einmal auf Steam verbinden."
+msgstr "Stellen Sie sicher, dass Sie mit dem Internet verbunden sind."
 
 #: src/widgets/runners/runner-row.vala:62
 msgid "Make sure the access token you provided is valid."
 msgstr ""
+"Stellen Sie sicher, dass der von Ihnen angegebene Zugriffstoken gültig ist."
 
 #: src/widgets/runners/load-more-row.vala:8
 #: src/widgets/runners/load-more-row.vala:17
@@ -367,14 +366,14 @@ msgid "Yes"
 msgstr "Ja"
 
 #: src/widgets/runners/remove-dialog.vala:49
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't delete %s"
-msgstr "Installiere %s"
+msgstr "%s konnte nicht gelöscht werden"
 
 #: src/widgets/runners/install-dialog.vala:52
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't install %s"
-msgstr "Installiere %s"
+msgstr "%s konnte nicht installiert werden"
 
 #: src/widgets/runners/install-dialog.vala:73
 #: src/widgets/runners/upgrade-dialog.vala:77
@@ -396,9 +395,9 @@ msgid "Upgrade %s"
 msgstr "Aktualisiere %s"
 
 #: src/widgets/runners/upgrade-dialog.vala:56
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't upgrade %s"
-msgstr "Installiere %s"
+msgstr "%s konnte nicht aktualisiert werden"
 
 #: src/widgets/runners/installed-row.vala:12
 #: src/widgets/runners/basic-row.vala:67
@@ -417,28 +416,30 @@ msgid ""
 "This version will get automatically updated when there's an update available "
 "each time your launch the application if automatic updates is enabled"
 msgstr ""
+"Diese Version wird automatisch aktualisiert, wenn ein Update verfügbar ist, "
+"sobald Sie die Anwendung starten, sofern automatische Updates aktiviert sind"
 
 #: src/widgets/runners/filters-box.vala:12
-#, fuzzy
 msgid "Installed"
-msgstr "Installiere %s"
+msgstr "Installiert"
 
 #: src/widgets/runners/filters-box.vala:17
-#, fuzzy
 msgid "Show installed runners"
-msgstr "Nur installierte anzeigen"
+msgstr "Zeige installierte Ausführungswerkzeuge"
 
 #: src/widgets/runners/filters-box.vala:27
 msgid "Show runners that are used by one game or more"
 msgstr ""
+"Zeige Ausführungswerkzeuge, die von einem oder mehreren Spielen verwendet "
+"werden"
 
 #: src/widgets/runners/filters-box.vala:32
 msgid "Unused"
-msgstr ""
+msgstr "Nicht benutzt"
 
 #: src/widgets/runners/filters-box.vala:37
 msgid "Show runners that aren't used by any games"
-msgstr ""
+msgstr "Zeige Ausführungswerkzeuge, die von keinem Spiel verwendet werden"
 
 #: src/widgets/runners/steamtinkerlaunch-row.vala:8
 msgid "Update to the latest version"
@@ -485,13 +486,12 @@ msgstr ""
 "werden können."
 
 #: src/widgets/games/games-box.vala:77 src/widgets/games/games-box.vala:339
-#, fuzzy
 msgid "Show search"
-msgstr "Seitenleiste anzeigen"
+msgstr "Suche anzeigen"
 
 #: src/widgets/games/games-box.vala:103
 msgid "Search for a game"
-msgstr ""
+msgstr "Suche nach einem Spiel"
 
 #: src/widgets/games/games-box.vala:110
 msgid "Name"
@@ -550,7 +550,7 @@ msgstr "Nicht definiert"
 
 #: src/widgets/games/games-box.vala:339
 msgid "Hide search"
-msgstr ""
+msgstr "Suche ausblenden"
 
 #: src/widgets/games/game-row.vala:55
 msgid "Modify the game launch options"
@@ -626,16 +626,15 @@ msgstr ""
 "werden sollen."
 
 #: src/widgets/games/mass-edit-dialog.vala:147
-#, fuzzy
 msgid ""
 "Couldn't change the compatibility tool/launch options of the selected games"
 msgstr ""
-"Beim Versuch, das Kompatibilitätswerkzeug von %s zu ändern, ist ein Fehler "
-"aufgetreten."
+"Die Kompatibilitäts-Tools/Startoptionen der ausgewählten Spiele konnten "
+"nicht geändert werden"
 
 #: src/widgets/games/mass-edit-dialog.vala:147
 msgid "The following games had an issue:"
-msgstr ""
+msgstr "Die folgenden Spiele hatten ein Problem:"
 
 #: src/widgets/games/shortcut-button.vala:23
 #: src/widgets/games/shortcut-button.vala:28
@@ -655,14 +654,12 @@ msgid "Delete the shortcut of ProtonPlus in Steam"
 msgstr "Entfernen Sie die Verknüpfung von ProtonPlus in Steam"
 
 #: src/widgets/games/shortcut-button.vala:38
-#, fuzzy
 msgid "Couldn't delete the shortcut in Steam"
-msgstr "Entfernen Sie die Verknüpfung von ProtonPlus in Steam"
+msgstr "Die Verknüpfung in Steam konnte nicht gelöscht werden"
 
 #: src/widgets/games/shortcut-button.vala:46
-#, fuzzy
 msgid "Couldn't create the shortcut in Steam"
-msgstr "Entfernen Sie die Verknüpfung von ProtonPlus in Steam"
+msgstr "Die Verknüpfung konnte in Steam nicht erstellt werden"
 
 #: src/widgets/games/switch-profile-button.vala:14
 msgid "Switch profile"
@@ -712,10 +709,9 @@ msgid "Apply the current modification"
 msgstr "Anwenden der aktuellen Änderung"
 
 #: src/widgets/games/launch-options-dialog.vala:57
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't change the launch options of %s"
-msgstr ""
-"Beim Versuch, die Startoptionen von %s zu ändern, ist ein Fehler aufgetreten."
+msgstr "Die Startoptionen von %s konnten nicht geändert werden"
 
 #: src/widgets/games/profile-dialog.vala:15
 msgid "Select a profile"
@@ -744,20 +740,17 @@ msgid "Set the default compatibility tool"
 msgstr "Einstellen des Standardkompatibilitätswerkzeugs"
 
 #: src/widgets/games/default-tool-dialog.vala:60
-#, fuzzy
 msgid "Couldn't change the default compatibility tool"
-msgstr "Einstellen des Standardkompatibilitätswerkzeugs"
+msgstr "Das Standard-Kompatibilitäts-Tool konnte nicht geändert werden"
 
 #: src/widgets/games/compatibility-tool-row.vala:18
 msgid "Select your desired compatibility tool"
 msgstr "Wählen Sie das gewünschte Kompatibilitätswerkzeug"
 
 #: src/widgets/games/compatibility-tool-dropdown.vala:75
-#, fuzzy, c-format
+#, c-format
 msgid "Couldn't change the compatibility tool of %s"
-msgstr ""
-"Beim Versuch, das Kompatibilitätswerkzeug von %s zu ändern, ist ein Fehler "
-"aufgetreten."
+msgstr "Das Kompatibilitäts-Tool von %s konnte nicht geändert werden"
 
 #: src/models/runners/steamtinkerlaunch.vala:6
 msgid ""
@@ -874,18 +867,16 @@ msgstr ""
 "Vulkan basierte Implementierung von Direct3D 9, 10 und 11 für Linux/Wine."
 
 #: src/translatables.vala:21
-#, fuzzy
 msgid "DXVK builds that work with pre-Vulkan 1.3 versions."
-msgstr "DXVK Builds, die mit Vor-Vulkan 1.3 Versionen funktionieren"
+msgstr "DXVK-Builds, die mit Versionen vor Vulkan 1.3 funktionieren."
 
 #: src/translatables.vala:22
-#, fuzzy
 msgid "DXVK Async builds that work with pre-Vulkan 1.3 versions."
-msgstr "DXVK Async Builds, die mit Vor-Vulkan 1.3 Versionen funktionieren"
+msgstr "DXVK-Async-Builds, die mit Versionen vor Vulkan 1.3 funktionieren."
 
 #: src/translatables.vala:23
 msgid "DXVK builds with gplasync patch by Ph42oN."
-msgstr ""
+msgstr "DXVK wird mit dem gplasync-Patch von Ph42oN erstellt."
 
 #: src/translatables.vala:24
 msgid ""
