--- a/po/de.po
+++ b/po/de.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2026-01-02 13:19-0500\n"
-"PO-Revision-Date: 2025-12-11 11:12+0100\n"
+"PO-Revision-Date: 2026-01-03 08:56+0100\n"
 "Last-Translator: Christian Lauinger <christian@lauinger-clan.de>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/protonplus/"
 "protonplus/de/>\n"
@@ -889,6 +889,8 @@ msgstr ""
 #: src/translatables.vala:25
 msgid "Dawn Winery's custom Proton fork with fixes for various games :xdd:"
 msgstr ""
+"Dawn Winerys angepasste Proton-Fork mit Fehlerbehebungen für diverse "
+"Spiele :xdd:"
 
 #: data/ui/gtk/help-overlay.ui:11
 msgctxt "shortcut window"
